kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-deployment
  labels:
    app: billing-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: billing-api
  template:
    metadata:
      labels:
        app: billing-api
    spec:
      containers:
      - name: billing-api
        image: nadersameh8/billing:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http-server
