kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: billing-service
spec:
  selector:
    app: billing-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: http-server
      name: http-service
  type: ClusterIP
